--- a/python/httpserver/index.html
+++ b/python/httpserver/index.html
@@ -4,5 +4,22 @@
 </header>
 <body>
 <h1>Welcome to my home page</h1>
+
+<p>
+This is a simple static web page
+</p>
+
+<h2>Get data from a HTML form</h1>
+
+<p>
+This section is used from the <b>example3.py</b> to get data from an HTML form.
+</p>
+
+<form method="POST" action="/send">
+<label>Insert your name: </label>
+<input type="text" name="your_name"/>
+<input type="submit" value="Send"/>
+</form>
+
 </body>
 </html>
