--- a/python/iphone/index.html
+++ b/python/iphone/index.html
@@ -2,6 +2,7 @@
 <html> 
 	<head> 
 	<title>Remote controller</title> 
+	<link rel="apple-touch-icon" href="images/apple.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="css/jquery.mobile-1.1.0.min.css" />
 	<script src="js/jquery-1.7.2.min.js"></script>
