--- a/python/tornado/adc/index.html
+++ b/python/tornado/adc/index.html
@@ -4,24 +4,23 @@
 <script src="js/tween-min.js"></script>
 <script src="js/steelseries-min.js"></script>
 
-
-<title>Banco di test NETUSPS1</title>
+<title>Daisy-20 analog meters</title>
 </head>
 
 <body>
-<h1>Banco di test NETUSPS1</h1>
+<h1>Daisy-20 analog meters</h1>
  
-<canvas id="ch0_cvs" width="200" height="150">[No canvas support]</canvas>
-<canvas id="ch1_cvs" width="200" height="150">[No canvas support]</canvas>
-<canvas id="ch2_cvs" width="200" height="150">[No canvas support]</canvas>
-<canvas id="ch3_cvs" width="200" height="150">[No canvas support]</canvas>
+<canvas id="ad0_cvs" width="200" height="150">[No canvas support]</canvas>
+<canvas id="ad1_cvs" width="200" height="150">[No canvas support]</canvas>
+<canvas id="ad2_cvs" width="200" height="150">[No canvas support]</canvas>
+<canvas id="ad3_cvs" width="200" height="150">[No canvas support]</canvas>
     
 <script>
 	var ws = new WebSocket("ws://" + location.host + "/websocket");
-	var ch0_gauge;
-	var ch1_gauge;
-	var ch2_gauge;
-	var ch3_gauge;
+	var ad0_gauge;
+	var ad1_gauge;
+	var ad2_gauge;
+	var ad3_gauge;
 
 	ws.onopen = function() 	{  
         console.log("connected"); 
@@ -34,10 +33,10 @@
 		strJSON=message.data;
 		objJSON=eval('('+strJSON+')');
 		
-		ch0_gauge.setValue(objJSON.ch0);
-		ch1_gauge.setValue(objJSON.ch1);
-		ch2_gauge.setValue(objJSON.ch2);
-		ch3_gauge.setValue(objJSON.ch3);
+		ad0_gauge.setValue(objJSON.ad0);
+		ad1_gauge.setValue(objJSON.ad1);
+		ad2_gauge.setValue(objJSON.ad2);
+		ad3_gauge.setValue(objJSON.ad3);
 	};
  
 	ws.onclose = function()	{
@@ -59,52 +58,52 @@
 		areas = [steelseries.Section(8, 12, 'rgba(220, 0, 0, 0.3)')];
 
 		
-		ch0_gauge = new steelseries.Radial('ch0_cvs', {
+		ad0_gauge = new steelseries.Radial('ad0_cvs', {
 							gaugeType: steelseries.GaugeType.TYPE4,
 							maxValue:0,
 							maxValue:10,
 							size: 201,
 							section: sections,
 							area: areas,
-							titleString: "CH 0",
+							titleString: "AD0",
 							unitString: "Volt",
-							threshold: 50,
+							threshold: 3.3,
 							lcdVisible: true
 		});
-		ch1_gauge = new steelseries.Radial('ch1_cvs', {
+		ad1_gauge = new steelseries.Radial('ad1_cvs', {
 							gaugeType: steelseries.GaugeType.TYPE4,
 							maxValue:0,
 							maxValue:10,
 							size: 201,
 							section: sections,
 							area: areas,
-							titleString: "CH 1",
+							titleString: "AD1",
 							unitString: "Volt",
-							threshold: 50,
+							threshold: 3.3,
 							lcdVisible: true
 		});
-		ch2_gauge = new steelseries.Radial('ch2_cvs', {
+		ad2_gauge = new steelseries.Radial('ad2_cvs', {
 							gaugeType: steelseries.GaugeType.TYPE4,
 							maxValue:0,
 							maxValue:10,
 							size: 201,
 							section: sections,
 							area: areas,
-							titleString: "CH 2",
+							titleString: "AD2",
 							unitString: "Volt",
-							threshold: 50,
+							threshold: 3.3,
 							lcdVisible: true
 		});
-		ch3_gauge = new steelseries.Radial('ch3_cvs', {
+		ad3_gauge = new steelseries.Radial('ad3_cvs', {
 							gaugeType: steelseries.GaugeType.TYPE4,
 							maxValue:0,
 							maxValue:10,
 							size: 201,
 							section: sections,
 							area: areas,
-							titleString: "CH 3",
+							titleString: "AD3",
 							unitString: "Volt",
-							threshold: 50,
+							threshold: 3.3,
 							lcdVisible: true
 		});
 
